Aktualizace jaro 2024 – Gradle 8.6, Java 21, testy ve formátu AAA, názvy metod